--- a/src/style/sidebar.scss
+++ b/src/style/sidebar.scss
@@ -62,7 +62,7 @@
   }
   
 }
- .el-submenu__icon-arrow {
-  display: none !important;
-}
+//  .el-submenu__icon-arrow {
+//   display: none !important;
+// }
 
